# honey-i-shrunk-the-images-py

./: .gitignore  CITATION.cff  LICENSE  README.md
.github/workflows/: awesomeapi.yml  awesomecli.yml  helloworld.yml  pycurl.yml  pydependencies.yml
awesomeapi/: Dockerfile  Dockerfile.alpine  Dockerfile.scratch  Dockerfile.slim  README.md  pyproject.toml
awesomeapi/awesomeapi/: entrypoint.py  main.py
awesomeapi/tests/: test_awesomeapi.py
awesomecli/: Dockerfile  Dockerfile.alpine  Dockerfile.scratch  Dockerfile.slim  README.md  pyproject.toml
awesomecli/awesomecli/: cli.py  entrypoint.py
awesomecli/tests/: test_awesomecli.py
helloworld/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.scratch  Dockerfile.slim  README.md  pyproject.toml
helloworld/helloworld/: __init__.py  main.py
helloworld/tests/: test_helloworld.py
pycurl/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.scratch  Dockerfile.slim  README.md  pyproject.toml
pycurl/pycurl/: pycurl.py
pycurl/tests/: test_pycurl.py
pydependencies/: Dockerfile  README.md  pyproject.toml
pydependencies/pydependencies/: pydependencies.py
pydependencies/tests/: test_pydependencies.py
