[tool.poetry]
name = "awesomecli"
version = "0.1.0"
description = "An awesome CLI with Typer"
authors = ["Naveen S <reachme@navs.page>"]
readme = "README.md"
exclude = ["awesomecli/entrypoint.py"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
awesomecli = "awesomecli.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
