[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "A helloworld project"
authors = ["Naveen S <reachme@navs.page>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
