[tool.poetry]
name = "pycurl"
version = "0.1.0"
description = "A minimal python curl"
authors = ["Naveen S <reachme@navs.page>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
